Add Twitch Documentation Changelog Notification

--- a/.env.example
+++ b/.env.example
@@ -53,6 +53,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 LINK_COUNT_DELAY=240 # Minutes
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_RECEIVER=
+TELEGRAM_HOME_GROUP=
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
