--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
         "spatie/laravel-medialibrary": "9.0.0",
         "tightenco/ziggy": "^1.4",
         "timothyasp/nova-color-field": "^1.0.4",
-        "titasgailius/search-relations": "^2.0.1"
+        "titasgailius/search-relations": "^2.0.1",
+        "ext-dom": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
