Add Google Calendar Notifications

--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,19 @@
         {
             "type": "vcs",
             "url": "https://github.com/Muetze42/laravel-trash-mail"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/Muetze42/google-api-php-client"
         }
     ],
     "require": {
         "php": "^8.0",
+        "ext-dom": "*",
         "ext-pdo": "*",
         "dmitrybubyakin/nova-medialibrary-field": "^3.2.11",
         "fruitcake/laravel-cors": "^2.0.4",
+        "google/apiclient": "2.x-dev",
         "guzzlehttp/guzzle": "^7.3.0",
         "hisorange/browser-detect": "^4.4",
         "inertiajs/inertia-laravel": "^0.4.4",
@@ -47,8 +53,7 @@
         "spatie/laravel-medialibrary": "9.0.0",
         "tightenco/ziggy": "^1.4",
         "timothyasp/nova-color-field": "^1.0.4",
-        "titasgailius/search-relations": "^2.0.1",
-        "ext-dom": "*"
+        "titasgailius/search-relations": "^2.0.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -75,7 +80,8 @@
     },
     "scripts": {
         "post-autoload-dump": [
-            "@php artisan package:discover --ansi"
+            "@php artisan package:discover --ansi",
+            "Google\\Task\\Composer::cleanup"
         ],
         "post-update-cmd": [],
         "post-root-package-install": [
@@ -88,7 +94,10 @@
     "extra": {
         "laravel": {
             "dont-discover": []
-        }
+        },
+        "google/apiclient-services": [
+            "Calendar"
+        ]
     },
     "config": {
         "optimize-autoloader": true,
