--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,6 @@ TELEGRAM_HOME_GROUP=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_REDIRECT_URI=
+
+GOOGLE_CALENDAR_ID=
+GOOGLE_CREDENTIALS_FILE=client_secret_xxx.json
