Add Login to menu and remove GitHub url from db

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,6 @@ GITHUB_REDIRECT_URI=
 
 GOOGLE_CALENDAR_ID=
 GOOGLE_CREDENTIALS_FILE=client_secret_xxx.json
+
+SITE_GIT_URL=https://github.com/Muetze42/huth.it
+SITE_GIT_BRANCH=development
