--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,8 @@
         "spatie/eloquent-sortable": "^4.0",
         "spatie/laravel-activitylog": "^4.1.1",
         "spatie/laravel-medialibrary": "9.0.0",
+        "spatie/laravel-tags": "^4.0",
+        "spatie/nova-tags-field": "^3.3",
         "tightenco/ziggy": "^1.4",
         "timothyasp/nova-color-field": "^1.0.4",
         "titasgailius/search-relations": "^2.0.1"
