--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=fd04676dece8f32863ab",
+    "/css/app.css": "/css/app.css?id=da506d0b4d78836e9dff",
+    "/css/error-pages.css": "/css/error-pages.css?id=268ef5135b4d880df44e"
 }
