--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,7 @@
         "titasgailius/search-relations": "^2.0.1"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.10",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.10.1",
