GitHub Notification System Init

--- a/composer.json
+++ b/composer.json
@@ -93,7 +93,9 @@
             "@php artisan package:discover --ansi",
             "Google\\Task\\Composer::cleanup"
         ],
-        "post-update-cmd": [],
+        "post-update-cmd": [
+            "@php artisan helper"
+        ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
