--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "ext-dom": "*",
         "ext-pdo": "*",
         "digital-creative/conditional-container": "^1.4",
+        "dillingham/nova-items-field": "^0.6.0",
         "dmitrybubyakin/nova-medialibrary-field": "^3.2.11",
         "fruitcake/laravel-cors": "^2.0.4",
         "google/apiclient": "2.x-dev",
