--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     },
     "devDependencies": {
         "@vue/compiler-sfc": "^3.1.1",
-        "axios": "^0.21",
+        "ansi-regex": ">=5.0.1",
+        "axios": "^0.24",
         "css-what": "^5.0.1",
         "install": "^0.13.0",
         "laravel-mix": "^6.0.24",
         "lodash": "^4.17.21",
         "npm": "^7.18.1",
+        "nth-check": ">=2.0.1",
         "postcss": "^8.3.5",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.35.1",
