Remove Google Calendar

--- a/.env.example
+++ b/.env.example
@@ -60,6 +60,7 @@ TELEGRAM_HOME_GROUP=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_REDIRECT_URI=
+GITHUB_ACCESS_TOKEN=
 
 GOOGLE_CALENDAR_ID=
 GOOGLE_CREDENTIALS_FILE=client_secret_xxx.json
