--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,8 @@
         "spatie/nova-tags-field": "^3.3",
         "tightenco/ziggy": "^1.4",
         "timothyasp/nova-color-field": "^1.0.4",
-        "titasgailius/search-relations": "^2.0.1"
+        "titasgailius/search-relations": "^2.0.1",
+        "ext-openssl": "*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
