--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,17 @@
         },
         {
             "type": "vcs",
+            "url": "https://github.com/Muetze42/consumer-api-administration"
+        },
+        {
+            "type": "vcs",
             "url": "https://github.com/Muetze42/laravel-trash-mail"
         }
     ],
     "require": {
         "php": "^8.0",
         "ext-dom": "*",
+        "ext-openssl": "*",
         "ext-pdo": "*",
         "digital-creative/conditional-container": "^1.4",
         "dillingham/nova-items-field": "^0.6.0",
@@ -48,6 +53,7 @@
         "laravelwebdev/responsive": "^1.0.1",
         "muetze/nova-icon-select": "^1.0",
         "muetze42/nova-charcounted-fields": "^1.0",
+        "norman-huth/consumer-api-administration": "dev-main",
         "norman-huth/laravel-trash-mail": "dev-main",
         "optimistdigital/nova-sortable": "^2.4",
         "scssphp/scssphp": "^1.6",
@@ -59,8 +65,7 @@
         "spatie/nova-tags-field": "^3.3",
         "tightenco/ziggy": "^1.4",
         "timothyasp/nova-color-field": "^1.0.4",
-        "titasgailius/search-relations": "^2.0.1",
-        "ext-openssl": "*"
+        "titasgailius/search-relations": "^2.0.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
