--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,8 @@
         ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
-            "@php artisan helper"
+            "@php artisan helper",
+            "@php artisan nova:custom-assets"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
