Add packagist update command and schedule log

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ GITHUB_USER_NAME=Muetze42
 NOVA_PACKAGES_TOKEN=
 NOVA_PACKAGES_AUTHOR=
 
+PACKAGIST_USER=Muetze
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
