--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "inertiajs/inertia-laravel": "^0.6",
         "laravel/framework": "^9.30",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "ext-dom": "*",
+        "ext-libxml": "*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
