--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0",
-        "tutorigo/laravel-ide-macros": "^1.6"
+        "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
         "psr-4": {
