--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@fortawesome/fontawesome-svg-core": "^6.2.0",
         "@fortawesome/free-brands-svg-icons": "^6.2.0",
+        "@fortawesome/pro-regular-svg-icons": "^6.2.0",
         "@fortawesome/sharp-solid-svg-icons": "^6.2.0",
         "@fortawesome/vue-fontawesome": "^3.0.1",
         "@headlessui/vue": "^1.7.1",
