--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-dom": "*",
+        "ext-libxml": "*",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "~0.0",
         "laravel/framework": "^10.0",
@@ -31,8 +33,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "norman-huth/helpers-collection-laravel": "^1.0",
-        "ext-libxml": "*",
-        "ext-dom": "*"
+        "norman-huth/nova-resource-card": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
